WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142628
WKErrorDomain should be declared nonnull
https://bugs.webkit.org/show_bug.cgi?id=142628
Summary
WKErrorDomain should be declared nonnull
Anders Carlsson
Reported
2015-03-12 10:41:51 PDT
WKErrorDomain should be declared nonnull
Attachments
Patch
(1.36 KB, patch)
2015-03-12 10:43 PDT
,
Anders Carlsson
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-03-12 10:43:13 PDT
Created
attachment 248524
[details]
Patch
Anders Carlsson
Comment 2
2015-03-12 10:47:04 PDT
Committed
r181445
: <
http://trac.webkit.org/changeset/181445
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug