WKErrorDomain should be declared nonnull https://bugs.webkit.org/show_bug.cgi?id=142628

Reviewed by Antti Koivisto.

Add WK_ASSUME_NONNULL_BEGIN and WK_ASSUME_NONNULL_END so everything will be implicitly nonnull.

* UIProcess/API/Cocoa/WKError.h:

Canonical link: https://commits.webkit.org/160656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181445 268f45cc-cd09-0410-ab3c-d52691b4dbfc